# copy-trader

./: .gitignore  CHANGELOG.md  FINAL.md  QUICKSTART.md  README.md  STATUS.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/api/v1/: __init__.py  accounts.py  auth.py  copy_configs.py  dashboard.py  invite.py  realtime.py  shop.py  system.py  traders.py  wallet.py
backend/app/core/: exceptions.py  ip_pool.py  security.py
backend/app/db/: base.py  models.py
backend/app/schemas/: accounts.py  auth.py  common.py  copy_configs.py  dashboard.py  invite.py  shop.py  system.py  traders.py  wallet.py
backend/app/services/: accounts.py  market_feed.py  scheduler.py  shop.py  users.py  wallet.py
backend/tests/: _test.sqlite  conftest.py  test_accounts.py  test_auth.py  test_copy_configs.py  test_market_feed.py  test_realtime.py
design/: DESIGN_DECISION.md  brand-spec.md  direction_1.html  direction_2.html  direction_3.html
design/marketing/: direction_brutal.html  direction_clarity.html  direction_velocity.html
docs/: architecture.md  data_model.md  dev_plan.md  event_schema.md
execution_engine/: Dockerfile  main.py  pyproject.toml
execution_engine/copy_trader_execution_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
execution_engine/engine/: __init__.py  config.py  db.py  events.py  follower.py  logging_setup.py  metrics.py  models.py  notifier.py  position_mapper.py  risk.py  scheduler.py  secrets.py  symbols.py
execution_engine/engine/exchanges/: __init__.py  _ccxt_base.py  base.py  binance.py  bitget.py  gate.py  hyperliquid.py  okx.py
execution_engine/tests/: conftest.py  test_binance_adapter.py  test_follower.py  test_hyperliquid_notifier.py  test_okx_gate_bitget_adapters.py  test_position_mapper.py  test_risk.py  test_secrets.py  test_symbols.py
frontend/: .env  .env.example  .gitignore  Dockerfile  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: accounts.ts  auth.ts  axios.ts  copyConfigs.ts  dashboard.ts  invite.ts  shop.ts  system.ts  traders.ts  wallet.ts
frontend/src/charts/: echartsTheme.ts
frontend/src/components/: CopyConfigDialog.vue  EditorialQuote.vue  IpAllowlist.vue  LiveLog.vue  PositionTable.vue  RechargeDialog.vue  Sparkline.vue  StatusBar.vue  TraderCard.vue
frontend/src/composables/: usePublicTraders.ts
frontend/src/i18n/: en.json  index.ts  zh-CN.json
frontend/src/i18n/marketing/: features.ts  home.ts  layout.ts  pricing.ts
frontend/src/mock/: data.ts
frontend/src/router/: index.ts
frontend/src/stores/: accounts.ts  auth.ts  copyConfigs.ts  traders.ts  wallet.ts
frontend/src/styles/: element-overrides.css  global.css  marketing.css  terminal.css  tokens.css
frontend/src/utils/: format.ts
frontend/src/views/auth/: ForgotPassword.vue  Login.vue  Register.vue
frontend/src/views/console/: Accounts.vue  BicoinWatchlist.vue  Dashboard.vue  ExchangeWatchlist.vue  Layout.vue  Positions.vue  System.vue  TraderSquare.vue
frontend/src/views/features/: Features.vue
frontend/src/views/home/: Home.vue
frontend/src/views/invite/: Invite.vue
frontend/src/views/pricing/: Pricing.vue
frontend/src/views/profile/: Security.vue
frontend/src/views/public/: MarketingLayout.vue  PublicLayout.vue
frontend/src/views/shop/: Shop.vue
frontend/src/views/tutorial/: Tutorial.vue
frontend/src/views/wallet/: Wallet.vue
infra/: .env.example  docker-compose.yml  prometheus.yml
infra/migrations/: 0001_init.sql
infra/scripts/: seed_demo_data.py
research/: galaxy_quantitative_report.md  signal_sources_research.md
signal_workers/: Dockerfile  README.md  __init__.py  __main__.py  cli.py  pyproject.toml
signal_workers/common/: __init__.py  event_bus.py  logging_setup.py  metrics.py  normalizer.py  ratelimit.py  redis_helper.py  schema.py  trader_registry.py
signal_workers/tests/: conftest.py  test_cli_smoke.py  test_event_bus.py  test_hyperliquid_parser.py  test_okx_diff.py  test_ratelimit.py  test_schema.py  test_trader_registry.py
signal_workers/workers/: __init__.py
signal_workers/workers/bicoin_scraper/: __init__.py  main.py
signal_workers/workers/binance_lead/: __init__.py  main.py
signal_workers/workers/evm_smart_money/: __init__.py  contracts.py  main.py
signal_workers/workers/hyperliquid_ws/: __init__.py  main.py  parser.py
signal_workers/workers/okx_public/: __init__.py  diff.py  main.py
