[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copy-trader-backend"
version = "0.1.0"
description = "Copy Trader FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "aiosqlite==0.20.0",
    "alembic==1.13.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "bcrypt==4.2.0",
    "python-jose[cryptography]==3.3.0",
    "cryptography==43.0.1",
    "redis[hiredis]==5.0.8",
    "httpx==0.27.2",
    "apscheduler==3.10.4",
    "python-multipart==0.0.10",
    "structlog==24.4.0",
    "prometheus-client==0.20.0",
    "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "anyio==4.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
