[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copy-trader-execution-engine"
version = "0.1.0"
description = "Copy Trader — asyncio execution engine (FollowerRunner + Risk + Adapters)"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "aiosqlite==0.20.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "redis[hiredis]==5.0.8",
    "httpx==0.27.2",
    "cryptography==43.0.1",
    "apscheduler==3.10.4",
    "prometheus-client==0.20.0",
    "structlog==24.4.0",
    "ccxt==4.4.20",
    "binance-connector==3.7.0",
    "python-okx==0.3.5",
    "hyperliquid-python-sdk==0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "fakeredis==2.24.1",
    "anyio==4.6.0",
    "respx==0.21.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
